header y footer terminados, en proceso el main de la pagina principal.

--- a/inicio.html
+++ b/inicio.html
@@ -23,13 +23,27 @@
         </nav>
     </header>
     <main class="main">
-
-
-
+        <h1 class="bienvenido!">¡Bienvenido a Motor Mania!</h1>
+        <section class="parrafo_inicio_section">
+            <img class="inicio_lambo" src="/assets/lamborghini-veneno.webp" alt="Imagen de un coche lamborghini">
+            <article class="parrafo_inicio_article">
+                <h2>¿Qué puedes encontrar aquí?</h2>
+                <p>Motor Mania es una empresa recién llegada
+                    que puede ofrecerte automóviles de alta calidad,
+                    aquí encontrarás vehículos de las marcas más populares
+                    y conocidas del mercado. Además, podrás contratar
+                    numerosos servicios para tu automóvil, ya sean de
+                    mantenimiento o mejora para tu vehículo. Para obtener
+                    información sobre tus datos es conveniente que accedas
+                    a la página de "Contacto" a través del enlace superior de
+                    la página para que puedas recibir promociones y descuentos
+                    de última hora.</p>
+            </article>
+        </section>
     </main>
     <footer class="footer">
         <ul class="footer_enlaces">
-            <p class="copyright">Copyright © 2024 Motor Mania</p>
+            <a href="inicio.html">Copyright © 2024 Motor Mania</a>
             <a href="inicio.html">Sobre nosotros</a>
             <a href="inicio.html">Cookies</a>
             <a href="inicio.html">Terminos de servicio</a>
