--- a/inicio.html
+++ b/inicio.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Inicio</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css"> <!-- Link para hacer referencia al archivo css -->
+    <link rel="icon" href="/assets/imagenes/LOGO_PROYECTO_2.png" type="image/png"> <!-- Link para cambiar la imagen de la pestaña del buscador -->
 </head>
 <body>
     <header class="header">
-        <a class="logo" href="inicio.html"> <img src="/assets/LOGO_PROYECTO_2.png" alt="Logo de Motor Mania"></a>
+        <a href="inicio.html"> <img class="logo" src="/assets/imagenes/LOGO_PROYECTO_2.png" alt="Logo de Motor Mania"></a>
         <form class="barra_busqueda">
             <input class="barra_busqueda_input" type="text" placeholder="Buscar...">
             <button class="barra_busqueda_button" type="submit">🔍</button>
@@ -19,13 +20,14 @@
                 <a href="inicio.html">Productos</a>
                 <a href="inicio.html">Contacto</a>
                 <a href="inicio.html">Otros servicios</a>
+                <a href="inicio.html"> <img class="icono_perfil" src="/assets/imagenes/icono_perfil.png" alt="Imagen del perfil"></a>
             </ul>
         </nav>
     </header>
     <main class="main">
         <h1 class="bienvenido!">¡Bienvenido a Motor Mania!</h1>
         <section class="parrafo_inicio_section">
-            <img class="inicio_lambo" src="/assets/lamborghini-veneno.webp" alt="Imagen de un coche lamborghini">
+            <img class="inicio_lambo" src="/assets/imagenes/lamborghini-veneno.webp" alt="Imagen de un coche lamborghini">
             <article class="parrafo_inicio_article">
                 <h2>¿Qué puedes encontrar aquí?</h2>
                 <p>Motor Mania es una empresa recién llegada
@@ -37,7 +39,8 @@
                     información sobre tus datos es conveniente que accedas
                     a la página de "Contacto" a través del enlace superior de
                     la página para que puedas recibir promociones y descuentos
-                    de última hora.</p>
+                    de última hora, además allí encontrarás nuestras redes
+                    sociales.</p>
             </article>
         </section>
     </main>
