--- a/contacto.html
+++ b/contacto.html
@@ -2,9 +2,52 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Contacto</title>
+    <title>Inicio</title>
+    <link rel="stylesheet" href="/css/styles.css"> <!-- Link para hacer referencia al archivo css -->
+    <link rel="icon" href="/assets/imagenes/LOGO_PROYECTO_2.png" type="image/png"> <!-- Link para cambiar la imagen de la pestaña del buscador -->
 </head>
 <body>
-
+<header class="header">
+    <a href="inicio.html"> <img class="logo" src="/assets/imagenes/LOGO_PROYECTO_2.png" alt="Logo de Motor Mania"></a>
+    <form class="barra_busqueda">
+        <input class="barra_busqueda_input" type="text" placeholder="Buscar...">
+        <button class="barra_busqueda_button" type="submit">🔍</button>
+    </form>
+    <nav>
+        <!-- Enlaces -->
+        <ul class="menu">
+            <a href="inicio.html">Marcas</a>
+            <a href="inicio.html">Productos</a>
+            <a href="inicio.html">Contacto</a>
+            <a href="inicio.html">Otros servicios</a>
+            <a href="inicio.html"> <img class="icono_perfil" src="/assets/imagenes/icono_perfil.png" alt="Imagen del perfil"></a>
+        </ul>
+    </nav>
+</header>
+<main class="main">
+    <h1 class="nuestras_redes">Nuestras redes sociales:</h1>
+    <section class="nuestras_redes">
+        <article>
+            <a><img class="facebook" src="/assets/imagenes/facebook_logo.png" alt="Imagen de Facebook"></a>
+        </article>
+            <h3>Motor_Mania</h3>
+        <article>
+            <a><img class="instagram" src="/assets/imagenes/Instagram_logo.svg" alt="Imagen de Instagram"></a>
+            <h3>Motor_Mania</h3>
+        </article>
+        <article>
+            <a><img class="twitter" src="/assets/imagenes/twitter_logo.webp" alt="Imagen de Twitter"></a>
+            <h3>Motor_Mania</h3>
+        </article>
+    </section>
+</main>
+<footer class="footer">
+    <ul class="footer_enlaces">
+        <a href="inicio.html">Copyright © 2024 Motor Mania</a>
+        <a href="inicio.html">Sobre nosotros</a>
+        <a href="inicio.html">Cookies</a>
+        <a href="inicio.html">Terminos de servicio</a>
+    </ul>
+</footer>
 </body>
 </html>
