--- a/contacto.html
+++ b/contacto.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <header class="header">
-    <a href="inicio.html"> <img class="logo" src="/assets/imagenes/LOGO_PROYECTO_2.png" alt="Logo de Motor Mania"></a>
+    <a href="inicio.html"><img class="logo" src="/assets/imagenes/LOGO_PROYECTO_2.png" alt="Logo de Motor Mania"></a>
     <form class="barra_busqueda">
         <input class="barra_busqueda_input" type="text" placeholder="Buscar...">
         <button class="barra_busqueda_button" type="submit">🔍</button>
@@ -17,26 +17,27 @@
         <!-- Enlaces -->
         <ul class="menu">
             <a href="inicio.html">Marcas</a>
-            <a href="inicio.html">Productos</a>
-            <a href="inicio.html">Contacto</a>
-            <a href="inicio.html">Otros servicios</a>
-            <a href="inicio.html"> <img class="icono_perfil" src="/assets/imagenes/icono_perfil.png" alt="Imagen del perfil"></a>
+            <a href="productos.html">Productos</a>
+            <a href="contacto.html">Contacto</a>
+            <a href="otros_servicios.html">Otros servicios</a>
+            <a href="#"><img class="icono_perfil" src="/assets/imagenes/icono_perfil.png" alt="Imagen del perfil"></a>
+            <!-- "#" se usa para que el enlace quede vacío y no haga nada -->
         </ul>
     </nav>
 </header>
 <main class="main">
     <h1 class="nuestras_redes">Nuestras redes sociales:</h1>
-    <section class="nuestras_redes">
+    <section class="redes_section">
         <article>
-            <a><img class="facebook" src="/assets/imagenes/facebook_logo.png" alt="Imagen de Facebook"></a>
-        </article>
-            <h3>Motor_Mania</h3>
-        <article>
-            <a><img class="instagram" src="/assets/imagenes/Instagram_logo.svg" alt="Imagen de Instagram"></a>
+            <a href="contacto.html"><img class="red_logo" src="/assets/imagenes/facebook_logo.png" alt="Imagen de Facebook"></a>
             <h3>Motor_Mania</h3>
         </article>
         <article>
-            <a><img class="twitter" src="/assets/imagenes/twitter_logo.webp" alt="Imagen de Twitter"></a>
+            <a href="contacto.html"><img class="red_logo" src="/assets/imagenes/Instagram_logo.svg" alt="Imagen de Instagram"></a>
+            <h3>Motor_Mania</h3>
+        </article>
+        <article>
+            <a href="contacto.html"><img class="red_logo" src="/assets/imagenes/twitter_logo.webp" alt="Imagen de Twitter"></a>
             <h3>Motor_Mania</h3>
         </article>
     </section>
