--- a/inicio.html
+++ b/inicio.html
@@ -10,17 +10,18 @@
     <header class="header">
         <a href="inicio.html"> <img class="logo" src="/assets/imagenes/LOGO_PROYECTO_2.png" alt="Logo de Motor Mania"></a>
         <form class="barra_busqueda">
-            <input class="barra_busqueda_input" type="text" placeholder="Buscar...">
+            <input cflass="barra_busqueda_input" type="text" placeholder="Buscar...">
             <button class="barra_busqueda_button" type="submit">🔍</button>
         </form>
         <nav>
             <!-- Enlaces -->
             <ul class="menu">
                 <a href="inicio.html">Marcas</a>
-                <a href="inicio.html">Productos</a>
-                <a href="inicio.html">Contacto</a>
-                <a href="inicio.html">Otros servicios</a>
-                <a href="inicio.html"> <img class="icono_perfil" src="/assets/imagenes/icono_perfil.png" alt="Imagen del perfil"></a>
+                <a href="productos.html">Productos</a>
+                <a href="contacto.html">Contacto</a>
+                <a href="otros_servicios.html">Otros servicios</a>
+                <a href="#"><img class="icono_perfil" src="/assets/imagenes/icono_perfil.png" alt="Imagen del perfil"></a>
+                <!-- "#" se usa para que el enlace quede vacío y no haga nada -->
             </ul>
         </nav>
     </header>
@@ -32,14 +33,14 @@
                 <h2>¿Qué puedes encontrar aquí?</h2>
                 <p>Motor Mania es una empresa recién llegada
                     que puede ofrecerte automóviles de alta calidad,
-                    aquí encontrarás vehículos de las marcas más populares
-                    y conocidas del mercado. Además, podrás contratar
-                    numerosos servicios para tu automóvil, ya sean de
+                    coches de las marcas más populares y conocidas del
+                    mercado. Además, podrás contratar numerosos
+                    servicios para tu automóvil, ya sean de
                     mantenimiento o mejora para tu vehículo. Para obtener
                     información sobre tus datos es conveniente que accedas
                     a la página de "Contacto" a través del enlace superior de
                     la página para que puedas recibir promociones y descuentos
-                    de última hora, además allí encontrarás nuestras redes
+                    de última hora, también encontrarás allí nuestras redes
                     sociales.</p>
             </article>
         </section>
