--- a/inicio.html
+++ b/inicio.html
@@ -10,13 +10,12 @@
     <header class="header">
         <a href="inicio.html"> <img class="logo" src="/assets/imagenes/LOGO_PROYECTO_2.png" alt="Logo de Motor Mania"></a>
         <form class="barra_busqueda">
-            <input cflass="barra_busqueda_input" type="text" placeholder="Buscar...">
+            <input class="barra_busqueda_input" type="text" placeholder="Buscar...">
             <button class="barra_busqueda_button" type="submit">🔍</button>
         </form>
         <nav>
             <!-- Enlaces -->
             <ul class="menu">
-                <a href="inicio.html">Marcas</a>
                 <a href="productos.html">Productos</a>
                 <a href="contacto.html">Contacto</a>
                 <a href="otros_servicios.html">Otros servicios</a>
@@ -31,7 +30,7 @@
             <img class="inicio_lambo" src="/assets/imagenes/lamborghini-veneno.webp" alt="Imagen de un coche lamborghini">
             <article class="parrafo_inicio_article">
                 <h2>¿Qué puedes encontrar aquí?</h2>
-                <p>Motor Mania es una empresa recién llegada
+                <p> Motor Mania es una empresa recién llegada
                     que puede ofrecerte automóviles de alta calidad,
                     coches de las marcas más populares y conocidas del
                     mercado. Además, podrás contratar numerosos
@@ -41,7 +40,7 @@
                     a la página de "Contacto" a través del enlace superior de
                     la página para que puedas recibir promociones y descuentos
                     de última hora, también encontrarás allí nuestras redes
-                    sociales.</p>
+                    sociales. </p>
             </article>
         </section>
     </main>
