--- a/inicio.html
+++ b/inicio.html
@@ -7,8 +7,9 @@
     <link rel="icon" href="/assets/imagenes/LOGO_PROYECTO_2.png" type="image/png"> <!-- Link para cambiar la imagen de la pestaña del buscador -->
 </head>
 <body>
+<!-- target="_self" añadidos en todos los enlaces para que se abran en la misma pestaña del navegador -->
     <header class="header">
-        <a href="inicio.html"> <img class="logo" src="/assets/imagenes/LOGO_PROYECTO_2.png" alt="Logo de Motor Mania"></a>
+        <a href="inicio.html" target="_self"> <img class="logo" src="/assets/imagenes/LOGO_PROYECTO_2.png" alt="Logo de Motor Mania"></a>
         <form class="barra_busqueda">
             <input class="barra_busqueda_input" type="text" placeholder="Buscar...">
             <button class="barra_busqueda_button" type="submit">🔍</button>
@@ -16,10 +17,10 @@
         <nav>
             <!-- Enlaces -->
             <ul class="menu">
-                <a href="productos.html">Productos</a>
-                <a href="contacto.html">Contacto</a>
-                <a href="otros_servicios.html">Otros servicios</a>
-                <a href="#"><img class="icono_perfil" src="/assets/imagenes/icono_perfil.png" alt="Imagen del perfil"></a>
+                <a href="productos.html" target="_self">Productos</a>
+                <a href="contacto.html" target="_self">Contacto</a>
+                <a href="otros_servicios.html" target="_self">Otros servicios</a>
+                <a href="#" target="_self"><img class="icono_perfil" src="/assets/imagenes/icono_perfil.png" alt="Imagen del perfil"></a>
                 <!-- "#" se usa para que el enlace quede vacío y no haga nada -->
             </ul>
         </nav>
@@ -46,10 +47,10 @@
     </main>
     <footer class="footer">
         <ul class="footer_enlaces">
-            <a href="inicio.html">Copyright © 2024 Motor Mania</a>
-            <a href="inicio.html">Sobre nosotros</a>
-            <a href="inicio.html">Cookies</a>
-            <a href="inicio.html">Terminos de servicio</a>
+            <a href="inicio.html" target="_self">Copyright © 2024 Motor Mania</a>
+            <a href="inicio.html" target="_self">Sobre nosotros</a>
+            <a href="inicio.html" target="_self">Cookies</a>
+            <a href="inicio.html" target="_self">Terminos de servicio</a>
         </ul>
     </footer>
 </body>
