Página de contacto terminada, en progreso la página de marcas

--- a/productos.html
+++ b/productos.html
@@ -18,7 +18,7 @@
         <ul class="menu">
             <a href="productos.html" target="_self">Productos</a>
             <a href="contacto.html" target="_self">Contacto</a>
-            <a href="otros_servicios.html" target="_self">Otros servicios</a>
+            <a href="marcas.html" target="_self">Marcas</a>
             <a href="#" target="_self"><img class="icono_perfil" src="/assets/imagenes/icono_perfil.png" alt="Imagen del perfil"></a>
             <!-- "#" se usa para que el enlace quede vacío y no haga nada -->
         </ul>
