--- a/contacto.html
+++ b/contacto.html
@@ -18,7 +18,7 @@
             <ul class="menu">
                 <a href="productos.html" target="_self">Productos</a>
                 <a href="contacto.html" target="_self">Contacto</a>
-                <a href="otros_servicios.html" target="_self">Otros servicios</a>
+                <a href="marcas.html" target="_self">Marcas</a>
                 <a href="#" target="_self"><img class="icono_perfil" src="/assets/imagenes/icono_perfil.png" alt="Imagen del perfil"></a>
                 <!-- "#" se usa para que el enlace quede vacío y no haga nada -->
             </ul>
@@ -61,7 +61,8 @@
                 <option value="">Seleccione una opción</option>
                 <option value="masculino">Masculino</option>
                 <option value="femenino">Femenino</option>
-                <option value="otro">Otro</option>
+                <option value="o
+                tro">Otro</option>
             </select>
 
             <!--Botón de enviar-->
@@ -72,6 +73,22 @@
             <!--"required" obliga al usuario a completar el campo, sino no puede enviarse el formulario-->
             <!--"id" identifica el campo con un nombre para la etiqueta <label>-->
         </form>
+
+        <h3 class="titulo_preguntas_frecuentes">Preguntas Frecuentes:</h3>
+        <section class="preguntas_section">
+            <article class="preguntas_article">
+                <h4>¿Cuál es el horario de atención?</h4>
+                <p>Estamos disponibles de lunes a viernes, de 10AM hasta 10PM</p>
+            </article>
+            <article class="preguntas_article">
+                <h4>¿Cuánto tiempo tardan en responder?</h4>
+                <p>Nuestro tiempo de respuesta siempre está dentro de las 24 horas hábiles</p>
+            </article>
+            <article class="preguntas_article">
+                <h4>¿Ofrecen soporte en otro idioma?</h4>
+                <p>¡Por supuesto! Aparte de español, también ofrecemos soporte en inglés</p>
+            </article>
+        </section>
     </main>
     <footer class="footer">
         <ul class="footer_enlaces">
