--- a/contacto.html
+++ b/contacto.html
@@ -16,6 +16,7 @@
         <nav>
             <!-- Enlaces -->
             <ul class="menu">
+                <a href="inicio.html" target="_self">Inicio</a>
                 <a href="productos.html" target="_self">Productos</a>
                 <a href="contacto.html" target="_self">Contacto</a>
                 <a href="marcas.html" target="_self">Marcas</a>
@@ -55,14 +56,21 @@
             <label for="telefono">Número de teléfono:</label>
             <input type="tel" id="telefono" placeholder="Escribe tu número de teléfono" required><br><br>
 
+            <!--Dirección-->
+            <label for="direccion">Dirección:</label>
+            <input type="text" id="direccion" placeholder="Escribe tu dirección" required><br><br>
+
+            <!--Código postal-->
+            <label for="codigo_postal">Código postal:</label>
+            <input type="text" id="codigo_postal" placeholder="Escribe tu código postal" required><br><br>
+
             <!--Género-->
             <label for="genero">Género:</label>
             <select id="genero" name="genero">
                 <option value="">Seleccione una opción</option>
                 <option value="masculino">Masculino</option>
                 <option value="femenino">Femenino</option>
-                <option value="o
-                tro">Otro</option>
+                <option value="otro">Otro</option>
             </select>
 
             <!--Botón de enviar-->
