--- a/inicio.html
+++ b/inicio.html
@@ -17,31 +17,30 @@
         <nav>
             <!-- Enlaces -->
             <ul class="menu">
+                <a href="inicio.html" target="_self">Inicio</a>
                 <a href="productos.html" target="_self">Productos</a>
                 <a href="contacto.html" target="_self">Contacto</a>
                 <a href="marcas.html" target="_self">Marcas</a>
-                <a href="#" target="_self"><img class="icono_perfil" src="/assets/imagenes/icono_perfil.png" alt="Imagen del perfil"></a>
+                <a href="#" target="_self"><img class="icono_perfil" src="/assets/imagenes/Sujeto.png" alt="Imagen del perfil"></a>
                 <!-- "#" se usa para que el enlace quede vacío y no haga nada -->
             </ul>
         </nav>
     </header>
     <main class="main">
-        <h1 class="bienvenido!">¡Bienvenido a Motor Mania!</h1>
+        <h1 class="titulo_inicio_bienvenido">¡Bienvenido a Motor Mania!</h1>
         <section class="parrafo_inicio_section">
-            <img class="inicio_lambo" src="/assets/imagenes/lamborghini-veneno.webp" alt="Imagen de un coche lamborghini">
+            <img class="imagen_inicio_lambo" src="/assets/imagenes/lamborghini-veneno.webp" alt="Imagen de un coche lamborghini">
             <article class="parrafo_inicio_article">
                 <h2>¿Qué puedes encontrar aquí?</h2>
                 <p> Motor Mania es una empresa recién llegada
                     que puede ofrecerte automóviles de alta calidad,
                     coches de las marcas más populares y conocidas del
-                    mercado. Además, podrás contratar numerosos
-                    servicios para tu automóvil, ya sean de
-                    mantenimiento o mejora para tu vehículo. Para obtener
-                    información sobre tus datos es conveniente que accedas
+                    mercado, podrás ver nuestras marcas colaboradoras en nuestra
+                    página de "Marcas". Para obtener información sobre tus datos es conveniente que accedas
                     a la página de "Contacto" a través del enlace superior de
                     la página para que puedas recibir promociones y descuentos
                     de última hora, también encontrarás allí nuestras redes
-                    sociales. </p>
+                    sociales.</p>
             </article>
         </section>
     </main>
