--- a/marcas.html
+++ b/marcas.html
@@ -16,9 +16,10 @@
     <nav>
         <!-- Enlaces -->
         <ul class="menu">
+            <a href="inicio.html" target="_self">Inicio</a>
             <a href="productos.html" target="_self">Productos</a>
             <a href="contacto.html" target="_self">Contacto</a>
-            <a href="marcas.html" target="_self">Otros servicios</a>
+            <a href="marcas.html" target="_self">Marcas</a>
             <a href="#" target="_self"><img class="icono_perfil" src="/assets/imagenes/icono_perfil.png" alt="Imagen del perfil"></a>
             <!-- "#" se usa para que el enlace quede vacío y no haga nada -->
         </ul>
@@ -26,40 +27,42 @@
 </header>
 <main class="main">
     <h1 class="titulo_nuestra_marca_nº1">Nuestra marca colaboradora nº1:</h1>
-    <section class="marcas_section">
-        <article class="marcas_article">
-            <a href="#" target="_self"><img class="marca_lamborguini" src="/assets/imagenes/Lamborghini.jpg" alt="Marca Lamborghini"></a>
-            <h3>Lamborghini</h3>
+    <section class="marca_lamborguini_section">
+        <article class="marca_lamborguini_article">
+            <a href="#" target="_self"><img class="marca_imagen_lamborguini" src="/assets/imagenes/Lamborghini.jpg" alt="Marca Lamborghini"></a>
         </article>
+        <p>Lamborghini, sinónimo de lujo, innovación y potencia,
+            es una de las marcas más emblemáticas en el mundo de
+            los superdeportivos, y nosotros tenemos la gran oportunidad
+            de trabajar con esta potente marca y ofrecer automóviles
+            de una calidad excelente</p>
     </section>
 
     <h2 class="titulo_nuestras_marcas">Otras marcas colaboradoras:</h2>
     <section class="marcas_section">
         <article class="marcas_article">
             <a href="#" target="_self"><img class="marca_imagen" src="/assets/imagenes/Ferrari.png" alt="Marca Ferrari"></a>
-            <h3>Ferrari</h3>
+            <h3 class="marca_titulo">Ferrari</h3>
         </article>
         <article class="marcas_article">
             <a href="#" target="_self"><img class="marca_imagen" src="/assets/imagenes/Aston-Martin.webp" alt="Marca Aston Martin"></a>
-            <h3>Aston Martin</h3>
+            <h3 class="marca_titulo">Aston Martin</h3>
         </article>
         <article class="marcas_article">
             <a href="#" target="_self"><img class="marca_imagen" src="/assets/imagenes/Bugatti.webp" alt="Marca Bugatti"></a>
-            <h3>Bugatti</h3>
+            <h3 class="marca_titulo">Bugatti</h3>
         </article>
     </section>
     <section class="marcas_section">
         <article class="marcas_article">
             <a href="#" target="_self"><img class="marca_imagen" src="/assets/imagenes/pagani.svg" alt="Marca Pagani"></a>
-            <h3>Pagani</h3>
+            <h3 class="marca_titulo">Pagani</h3>
         </article>
         <article class="marcas_article">
             <a href="#" target="_self"><img class="marca_imagen" src="/assets/imagenes/Maserati.jpg" alt="Marca Maserati"></a>
-            <h3>Maserati</h3>
+            <h3 class="marca_titulo">Maserati</h3>
         </article>
     </section>
-
-
 </main>
 <footer class="footer">
     <ul class="footer_enlaces">
