--- a/productos.html
+++ b/productos.html
@@ -16,6 +16,7 @@
     <nav>
         <!-- Enlaces -->
         <ul class="menu">
+            <a href="inicio.html" target="_self">Inicio</a>
             <a href="productos.html" target="_self">Productos</a>
             <a href="contacto.html" target="_self">Contacto</a>
             <a href="marcas.html" target="_self">Marcas</a>
