solo queda la pagina de productos.

--- a/inicio.html
+++ b/inicio.html
@@ -43,6 +43,43 @@
                     sociales.</p>
             </article>
         </section>
+        <h1 class="titulo_confiar_en_nosotros">¿Por qué confiar en MotorMania?</h1>
+        <section class="confiar_en_nosotros_section">
+            <article class="confiar_en_nosotros_article">
+                <h3>🏷️ Valoración de precios</h3>
+                <p>Te ayudamos y orientamos a entender si el precio de una oferta es bueno o no</p>
+            </article>
+            <article class="confiar_en_nosotros_article">
+                <h3>🔎 Rapidez de búsqueda</h3>
+                <p>Nuestro personal te ayuda a encontrar tu vehículo ideal en un abrir y cerrar de ojos</p>
+            </article>
+            <article class="confiar_en_nosotros_article">
+                <h3>📝 Variedad de ofertas</h3>
+                <p>MotorMania te ofrece un catálogo muy extenso de vehículos a tu disposición</p>
+            </article>
+        </section>
+        <h2 class="titulo_noticias">Noticias de ultima hora</h2>
+        <section class="noticias_section">
+            <img class="imagen_noticia" src="/assets/imagenes/lamborghini-huracan-tecnica.jpg" alt="Imagen de un coche lamborghini de una noticia">
+            <article class="noticias_article">
+                <h4>Así es el sucesor del Lamborghini Huracán</h4>
+                <p>Así estira el sucesor del Lamborghini Huracán, que llega hasta las 10.000 vueltas. Y es que hay dudas con respecto a su cambio de motorización, y de si perderá la esencia del maravilloso motor V10. Ahora encontraremos en el Lamborghini de acceso un motor V8 híbrido. El nuevo modelo de la firma de Sant'Agata Bolognese debutará en poco más de una semana. El sonido está bajo examen, pues no sbaemos a ciencia cierta cómo sonará, y eso preocupa a los amantes de la marca. El motor V10 de 5.2 litros es uno de los motores que mejor suenan del mercado. Suceder al Huracán es complicado, muy complicado. En 2023 la marca vendió más que nunca, fue su mejor año, y se lo deben al Urus, pero también al Huracán. Estos dos Lamborghini han sostenido las ventas en los últimos años, con récord tras récord.</p>
+            </article>
+        </section>
+        <section class="noticias_section">
+            <article class="noticias_article">
+                <h4>Maserati revela el diseño del Maserati Tipo Folgore para la Temporada 11</h4>
+                <p>El coche presentado tiene un diseño renovado, una carrocería más aerodinámica y una nueva estética que recoge la historia de 110 años de victorias y éxitos de la marca Maserati en los circuitos. El nombre Maserati Tipo Folgore rinde homenaje a la gama totalmente eléctrica del Tridente, en un simbólico puente que une pasado, presente y futuro. Viste el icónico azul de Maserati con detalles en color oro rosado en la parte trasera como símbolo de innovación y electrificación. La fusión de ambos colores de la carrocería crea unas inscripciones que rememoran la herencia deportiva de Maserati. En los laterales del interior, un entrelazado de caracteres de nombres y fechas muestra los datos más significativos de las victorias que Maserati ha cosechado a lo largo de los años, gracias a sus legendarios pilotos. Éxitos inolvidables en los circuitos más prestigiosos del mundo.</p>
+            </article>
+            <img class="imagen_noticia" src="/assets/imagenes/maserati_f1.webp" alt="Imagen de un coche lamborghini de una noticia">
+        </section>
+        <section class="noticias_section">
+            <img class="imagen_noticia" src="/assets/imagenes/bugatti-chiron-super-sport-golden-era.avif" alt="Imagen de un coche lamborghini de una noticia">
+            <article class="noticias_article">
+                <h4>Bugatti Chiron Super Sport Golden Era: Una obra de arte de altos vuelos</h4>
+                <p>Con motivo de la Monterrey Car Week, Bugatti desvela un Chiron dorado muy especial con bocetos de diseño repartidos por su carrocería e interior en un trabajo que ha necesitado de dos años para terminarse. Bugatti Sur Mesure se ha convertido en la mejor aliada para todos aquellos acaudalados clientes par los que tener un simple Bugatti no es suficiente. Este departamento de personalización estenado hace relativamente poco, en 2021, ofrece posibilidades casi infinitas para crear modelos únicos, y uno de los últimos ejemplos lo tenemos en este Bugatti Chiron Super Sport, una suerte de dorado cuaderno de bocetos de diseño rodante capaz de superar los 400 km/h y que ha sido el resultado de un trabajo de dos años.</p>
+            </article>
+        </section>
     </main>
     <footer class="footer">
         <ul class="footer_enlaces">
