queda terminar la pagina de productos.

--- a/productos.html
+++ b/productos.html
@@ -26,37 +26,57 @@
     </nav>
 </header>
 <main class="main">
+    <h2 class="titulo_productos_disponibles">Últimos modelos disponibles</h2>
     <section class="productos_section">
         <article class="productos_article">
             <img class="imagen_producto" src="/assets/imagenes/producto_lambo_huracan.webp" alt="Imagen de un producto">
-            <h1 class="titulo_producto">Lamborghini Huracán</h1>
+            <div class="div_producto">
+                <h1 class="titulo_producto">Lamborghini Huracán</h1>
+                <p>216.444€</p>
+            </div>
             <a class="boton_producto" href="#" target="_self">Comprar</a>
         </article>
         <article class="productos_article">
             <img class="imagen_producto" src="/assets/imagenes/producto_bugatti-chiron-super-sport.webp" alt="Imagen de un producto">
-            <h1 class="titulo_producto">Bugatti Chiron Super Sport</h1>
+            <div class="div_producto">
+                <h1 class="titulo_producto">Bugatti Chiron Super Sport</h1>
+                <p>2.402.020€</p>
+            </div>
             <a class="boton_producto" href="#" target="_self">Comprar</a>
+
         </article>
         <article class="productos_article">
             <img class="imagen_producto" src="/assets/imagenes/producto_aston-martin-vanquish.webp" alt="Imagen de un producto">
-            <h1 class="titulo_producto">Aston Martin Vanquish</h1>
+            <div class="div_producto">
+                <h1 class="titulo_producto">Aston Martin Vanquish</h1>
+                <p>1.220.500€</p>
+            </div>
             <a class="boton_producto" href="#" target="_self">Comprar</a>
         </article>
     </section>
     <section class="productos_section">
         <article class="productos_article">
             <img class="imagen_producto" src="/assets/imagenes/producto_pagani-imola-roadster.webp" alt="Imagen de un producto">
-            <h1 class="titulo_producto">Pagani Imola Roadster</h1>
+            <div class="div_producto">
+                <h1 class="titulo_producto">Pagani Imola Roadster</h1>
+                <p>5.570.900€</p>
+            </div>
             <a class="boton_producto" href="#" target="_self">Comprar</a>
         </article>
         <article class="productos_article">
             <img class="imagen_producto_ferrari" src="/assets/imagenes/producto_ferrari_458_2011.webp" alt="Imagen de un producto">
-            <h1 class="titulo_producto">Ferrari 458 2011</h1>
+            <div class="div_producto">
+                <h1 class="titulo_producto">Ferrari 458 2011</h1>
+                <p>354.600€</p>
+            </div>
             <a class="boton_producto" href="#" target="_self">Comprar</a>
         </article>
         <article class="productos_article">
             <img class="imagen_producto" src="/assets/imagenes/producto_maserati_MC20_2025.jpg" alt="Imagen de un producto">
-            <h1 class="titulo_producto">Maserati MC20 2025</h1>
+            <div class="div_producto">
+                <h1 class="titulo_producto">Maserati MC20 2025</h1>
+                <p>215.000€</p>
+            </div>
             <a class="boton_producto" href="#" target="_self">Comprar</a>
         </article>
     </section>
