--- a/inicio.html
+++ b/inicio.html
@@ -11,7 +11,8 @@
     <header class="header">
         <a href="inicio.html" target="_self"> <img class="logo" src="/assets/imagenes/LOGO_PROYECTO_2.png" alt="Logo de Motor Mania"></a>
         <form class="barra_busqueda">
-            <input class="barra_busqueda_input" type="text" placeholder="Buscar...">
+            <label for="buscar" class="barra_busqueda_label"></label>
+            <input id="buscar" class="barra_busqueda_input" type="text" placeholder="Buscar...">
             <button class="barra_busqueda_button" type="submit">🔍</button>
         </form>
         <nav>
@@ -29,7 +30,11 @@
     <main class="main">
         <h1 class="titulo_inicio_bienvenido">¡Bienvenido a Motor Mania!</h1>
         <section class="parrafo_inicio_section">
-            <img class="imagen_inicio_lambo" src="/assets/imagenes/lamborghini-veneno.webp" alt="Imagen de un coche lamborghini">
+            <article class="animacion_inicio_article">
+                <img class="animacion_inicio_imagen" src="/assets/imagenes/lamborghini-veneno.webp" alt="Lamborghini Veneno">
+                <img class="animacion_inicio_imagen" src="/assets/imagenes/animacion_inicio.jpg" alt="Maserati F1">
+                <img class="animacion_inicio_imagen" src="/assets/imagenes/animacion_inicio2.jpg" alt="Bugatti Chiron">
+            </article>
             <article class="parrafo_inicio_article">
                 <h2>¿Qué puedes encontrar aquí?</h2>
                 <p> Motor Mania es una empresa recién llegada
