--- a/inicio.html
+++ b/inicio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <title>Inicio</title>
@@ -18,12 +18,14 @@
         <nav>
             <!-- Enlaces -->
             <ul class="menu">
+                <li>
                 <a href="inicio.html" target="_self">Inicio</a>
                 <a href="productos.html" target="_self">Productos</a>
                 <a href="contacto.html" target="_self">Contacto</a>
                 <a href="marcas.html" target="_self">Marcas</a>
                 <a href="#" target="_self"><img class="icono_perfil" src="/assets/imagenes/Sujeto.png" alt="Imagen del perfil"></a>
                 <!-- "#" se usa para que el enlace quede vacío y no haga nada -->
+                </li>
             </ul>
         </nav>
     </header>
@@ -88,10 +90,12 @@
     </main>
     <footer class="footer">
         <ul class="footer_enlaces">
-            <a href="inicio.html" target="_self">Copyright © 2024 Motor Mania</a>
-            <a href="inicio.html" target="_self">Sobre nosotros</a>
-            <a href="inicio.html" target="_self">Cookies</a>
-            <a href="inicio.html" target="_self">Terminos de servicio</a>
+            <li>
+                <a href="inicio.html" target="_self">Copyright © 2024 Motor Mania</a>
+                <a href="inicio.html" target="_self">Sobre nosotros</a>
+                <a href="inicio.html" target="_self">Cookies</a>
+                <a href="inicio.html" target="_self">Terminos de servicio</a>
+            </li>
         </ul>
     </footer>
 </body>
