--- a/marcas.html
+++ b/marcas.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <title>Marcas</title>
@@ -7,70 +7,76 @@
     <link rel="icon" href="/assets/imagenes/LOGO_PROYECTO_2.png" type="image/png"> <!-- Link para cambiar la imagen de la pestaña del buscador -->
 </head>
 <body>
-<header class="header">
-    <a href="inicio.html" target="_self"> <img class="logo" src="/assets/imagenes/LOGO_PROYECTO_2.png" alt="Logo de Motor Mania"></a>
-    <form class="barra_busqueda">
-        <input class="barra_busqueda_input" type="text" placeholder="Buscar...">
-        <button class="barra_busqueda_button" type="submit">🔍</button>
-    </form>
-    <nav>
-        <!-- Enlaces -->
-        <ul class="menu">
-            <a href="inicio.html" target="_self">Inicio</a>
-            <a href="productos.html" target="_self">Productos</a>
-            <a href="contacto.html" target="_self">Contacto</a>
-            <a href="marcas.html" target="_self">Marcas</a>
-            <a href="#" target="_self"><img class="icono_perfil" src="/assets/imagenes/icono_perfil.png" alt="Imagen del perfil"></a>
-            <!-- "#" se usa para que el enlace quede vacío y no haga nada -->
-        </ul>
-    </nav>
-</header>
-<main class="main">
-    <h1 class="titulo_nuestra_marca_nº1">Nuestra marca colaboradora nº1:</h1>
-    <section class="marca_lamborguini_section">
-        <article class="marca_lamborguini_article">
-            <a href="#" target="_self"><img class="marca_imagen_lamborguini" src="/assets/imagenes/Lamborghini.jpg" alt="Marca Lamborghini"></a>
-        </article>
-        <p>Lamborghini, sinónimo de lujo, innovación y potencia,
-            es una de las marcas más emblemáticas en el mundo de
-            los superdeportivos, y nosotros tenemos la gran oportunidad
-            de trabajar con esta potente marca y ofrecer automóviles
-            de una calidad excelente</p>
-    </section>
+<!-- target="_self" añadidos en todos los enlaces para que se abran en la misma pestaña del navegador -->
+    <header class="header">
+        <a href="inicio.html" target="_self"> <img class="logo" src="/assets/imagenes/LOGO_PROYECTO_2.png" alt="Logo de Motor Mania"></a>
+        <form class="barra_busqueda">
+            <label for="buscar" class="barra_busqueda_label"></label>
+            <input id="buscar" class="barra_busqueda_input" type="text" placeholder="Buscar...">
+            <button class="barra_busqueda_button" type="submit">🔍</button>
+        </form>
+        <nav>
+            <!-- Enlaces -->
+            <ul class="menu">
+                <li>
+                    <a href="inicio.html" target="_self">Inicio</a>
+                    <a href="productos.html" target="_self">Productos</a>
+                    <a href="contacto.html" target="_self">Contacto</a>
+                    <a href="marcas.html" target="_self">Marcas</a>
+                    <a href="#" target="_self"><img class="icono_perfil" src="/assets/imagenes/Sujeto.png" alt="Imagen del perfil"></a>
+                    <!-- "#" se usa para que el enlace quede vacío y no haga nada -->
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <main class="main">
+        <h1 class="titulo_nuestra_marca_nº1">Nuestra marca colaboradora nº1:</h1>
+        <section class="marca_lamborguini_section">
+            <article class="marca_lamborguini_article">
+                <a href="#" target="_self"><img class="marca_imagen_lamborguini" src="/assets/imagenes/Lamborghini.jpg" alt="Marca Lamborghini"></a>
+            </article>
+            <p>Lamborghini, sinónimo de lujo, innovación y potencia,
+                es una de las marcas más emblemáticas en el mundo de
+                los superdeportivos, y nosotros tenemos la gran oportunidad
+                de trabajar con esta potente marca y ofrecer automóviles
+                de una calidad excelente</p>
+        </section>
 
-    <h2 class="titulo_nuestras_marcas">Otras marcas colaboradoras:</h2>
-    <section class="marcas_section">
-        <article class="marcas_article">
-            <a href="#" target="_self"><img class="marca_imagen" src="/assets/imagenes/Ferrari.png" alt="Marca Ferrari"></a>
-            <h3 class="marca_titulo">Ferrari</h3>
-        </article>
-        <article class="marcas_article">
-            <a href="#" target="_self"><img class="marca_imagen" src="/assets/imagenes/Aston-Martin.webp" alt="Marca Aston Martin"></a>
-            <h3 class="marca_titulo">Aston Martin</h3>
-        </article>
-        <article class="marcas_article">
-            <a href="#" target="_self"><img class="marca_imagen" src="/assets/imagenes/Bugatti.webp" alt="Marca Bugatti"></a>
-            <h3 class="marca_titulo">Bugatti</h3>
-        </article>
-    </section>
-    <section class="marcas_section">
-        <article class="marcas_article">
-            <a href="#" target="_self"><img class="marca_imagen" src="/assets/imagenes/pagani.svg" alt="Marca Pagani"></a>
-            <h3 class="marca_titulo">Pagani</h3>
-        </article>
-        <article class="marcas_article">
-            <a href="#" target="_self"><img class="marca_imagen" src="/assets/imagenes/Maserati.jpg" alt="Marca Maserati"></a>
-            <h3 class="marca_titulo">Maserati</h3>
-        </article>
-    </section>
-</main>
-<footer class="footer">
-    <ul class="footer_enlaces">
-        <a href="inicio.html" target="_self">Copyright © 2024 Motor Mania</a>
-        <a href="inicio.html" target="_self">Sobre nosotros</a>
-        <a href="inicio.html" target="_self">Cookies</a>
-        <a href="inicio.html" target="_self">Terminos de servicio</a>
-    </ul>
-</footer>
+        <h2 class="titulo_nuestras_marcas">Otras marcas colaboradoras:</h2>
+        <section class="marcas_section">
+            <article class="marcas_article">
+                <a href="#" target="_self"><img class="marca_imagen" src="/assets/imagenes/Ferrari.png" alt="Marca Ferrari"></a>
+                <h3 class="marca_titulo">Ferrari</h3>
+            </article>
+            <article class="marcas_article">
+                <a href="#" target="_self"><img class="marca_imagen" src="/assets/imagenes/Aston-Martin.webp" alt="Marca Aston Martin"></a>
+                <h3 class="marca_titulo">Aston Martin</h3>
+            </article>
+            <article class="marcas_article">
+                <a href="#" target="_self"><img class="marca_imagen" src="/assets/imagenes/Bugatti.webp" alt="Marca Bugatti"></a>
+                <h3 class="marca_titulo">Bugatti</h3>
+            </article>
+        </section>
+        <section class="marcas_section">
+            <article class="marcas_article">
+                <a href="#" target="_self"><img class="marca_imagen" src="/assets/imagenes/pagani.svg" alt="Marca Pagani"></a>
+                <h3 class="marca_titulo">Pagani</h3>
+            </article>
+            <article class="marcas_article">
+                <a href="#" target="_self"><img class="marca_imagen" src="/assets/imagenes/Maserati.jpg" alt="Marca Maserati"></a>
+                <h3 class="marca_titulo">Maserati</h3>
+            </article>
+        </section>
+    </main>
+    <footer class="footer">
+        <ul class="footer_enlaces">
+            <li>
+                <a href="inicio.html" target="_self">Copyright © 2024 Motor Mania</a>
+                <a href="inicio.html" target="_self">Sobre nosotros</a>
+                <a href="inicio.html" target="_self">Cookies</a>
+                <a href="inicio.html" target="_self">Terminos de servicio</a>
+            </li>
+        </ul>
+    </footer>
 </body>
 </html>
