--- a/productos.html
+++ b/productos.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <title>Productos</title>
@@ -7,87 +7,106 @@
     <link rel="icon" href="/assets/imagenes/LOGO_PROYECTO_2.png" type="image/png"> <!-- Link para cambiar la imagen de la pestaña del buscador -->
 </head>
 <body>
-<header class="header">
-    <a href="inicio.html" target="_self"> <img class="logo" src="/assets/imagenes/LOGO_PROYECTO_2.png" alt="Logo de Motor Mania"></a>
-    <form class="barra_busqueda">
-        <input class="barra_busqueda_input" type="text" placeholder="Buscar...">
-        <button class="barra_busqueda_button" type="submit">🔍</button>
-    </form>
-    <nav>
-        <!-- Enlaces -->
-        <ul class="menu">
-            <a href="inicio.html" target="_self">Inicio</a>
-            <a href="productos.html" target="_self">Productos</a>
-            <a href="contacto.html" target="_self">Contacto</a>
-            <a href="marcas.html" target="_self">Marcas</a>
-            <a href="#" target="_self"><img class="icono_perfil" src="/assets/imagenes/icono_perfil.png" alt="Imagen del perfil"></a>
-            <!-- "#" se usa para que el enlace quede vacío y no haga nada -->
+    <header class="header">
+        <a href="inicio.html" target="_self"> <img class="logo" src="/assets/imagenes/LOGO_PROYECTO_2.png" alt="Logo de Motor Mania"></a>
+        <form class="barra_busqueda">
+            <label for="buscar" class="barra_busqueda_label"></label>
+            <input id="buscar" class="barra_busqueda_input" type="text" placeholder="Buscar...">
+            <button class="barra_busqueda_button" type="submit">🔍</button>
+        </form>
+        <nav>
+            <!-- Enlaces -->
+            <ul class="menu">
+                <li>
+                    <a href="inicio.html" target="_self">Inicio</a>
+                    <a href="productos.html" target="_self">Productos</a>
+                    <a href="contacto.html" target="_self">Contacto</a>
+                    <a href="marcas.html" target="_self">Marcas</a>
+                    <a href="#" target="_self"><img class="icono_perfil" src="/assets/imagenes/Sujeto.png" alt="Imagen del perfil"></a>
+                    <!-- "#" se usa para que el enlace quede vacío y no haga nada -->
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <main class="main">
+        <h1 class="titulo_productos_disponibles">Últimos modelos disponibles</h1>
+        <section class="productos_section">
+            <article class="productos_article">
+                <img class="imagen_producto" src="/assets/imagenes/producto_lambo_huracan.webp" alt="Imagen de un producto">
+                <div class="div_producto">
+                    <h1 class="titulo_producto">Lamborghini Huracán</h1>
+                    <p>216.444€</p>
+                </div>
+                <a class="boton_producto" href="#" target="_self">Comprar</a>
+            </article>
+            <article class="productos_article">
+                <img class="imagen_producto" src="/assets/imagenes/producto_bugatti-chiron-super-sport.webp" alt="Imagen de un producto">
+                <div class="div_producto">
+                    <h1 class="titulo_producto">Bugatti Chiron Super Sport</h1>
+                    <p>2.402.020€</p>
+                </div>
+                <a class="boton_producto" href="#" target="_self">Comprar</a>
+            </article>
+            <article class="productos_article">
+                <img class="imagen_producto" src="/assets/imagenes/producto_aston-martin-vanquish.webp" alt="Imagen de un producto">
+                <div class="div_producto">
+                    <h1 class="titulo_producto">Aston Martin Vanquish</h1>
+                    <p>1.220.500€</p>
+                </div>
+                <a class="boton_producto" href="#" target="_self">Comprar</a>
+            </article>
+        </section>
+        <section class="productos_section">
+            <article class="productos_article">
+                <img class="imagen_producto" src="/assets/imagenes/producto_pagani-imola-roadster.webp" alt="Imagen de un producto">
+                <div class="div_producto">
+                    <h1 class="titulo_producto">Pagani Imola Roadster</h1>
+                    <p>5.570.900€</p>
+                </div>
+                <a class="boton_producto" href="#" target="_self">Comprar</a>
+            </article>
+            <article class="productos_article">
+                <img class="imagen_producto_ferrari" src="/assets/imagenes/producto_ferrari_458_2011.webp" alt="Imagen de un producto">
+                <div class="div_producto">
+                    <h1 class="titulo_producto">Ferrari 458 2011</h1>
+                    <p>354.600€</p>
+                </div>
+                <a class="boton_producto" href="#" target="_self">Comprar</a>
+            </article>
+            <article class="productos_article">
+                <img class="imagen_producto" src="/assets/imagenes/producto_maserati_MC20_2025.jpg" alt="Imagen de un producto">
+                <div class="div_producto">
+                    <h1 class="titulo_producto">Maserati MC20 2025</h1>
+                    <p>215.000€</p>
+                </div>
+                <a class="boton_producto" href="#" target="_self">Comprar</a>
+            </article>
+        </section>
+        <h2 class="titulo_solo_por_hoy">¡Sólo por hoy!</h2>
+        <section class="oferta_section">
+            <article class="oferta_article">
+                <img class="imagen_oferta" src="/assets/imagenes/oferta_solo_por_hoy.jpg" alt="Imagen de una oferta">
+                <p>wrfqwrfqf</p>
+            </article>
+            <div>
+                <article class="animacion_productos_article">
+                    <img class="animacion_productos_imagen" src="/assets/imagenes/pagani-huayra-codalunga-1.webp" alt="Imagen del Pagani Huayra Codalunga">
+                    <img class="animacion_productos_imagen" src="/assets/imagenes/pagani-huayra-codalunga-2.jpeg" alt="Imagen del Pagani Huayra Codalunga">
+                    <img class="animacion_productos_imagen" src="/assets/imagenes/pagani-huayra-codalunga-3.jpg" alt="Imagen del Pagani Huayra Codalunga">
+                    <img class="animacion_productos_imagen" src="/assets/imagenes/pagani-huayra-codalunga-4.jpg" alt="Imagen del Pagani Huayra Codalunga">
+                </article>
+            </div>
+        </section>
+    </main>
+    <footer class="footer">
+        <ul class="footer_enlaces">
+            <li>
+                <a href="inicio.html" target="_self">Copyright © 2024 Motor Mania</a>
+                <a href="inicio.html" target="_self">Sobre nosotros</a>
+                <a href="inicio.html" target="_self">Cookies</a>
+                <a href="inicio.html" target="_self">Terminos de servicio</a>
+            </li>
         </ul>
-    </nav>
-</header>
-<main class="main">
-    <h2 class="titulo_productos_disponibles">Últimos modelos disponibles</h2>
-    <section class="productos_section">
-        <article class="productos_article">
-            <img class="imagen_producto" src="/assets/imagenes/producto_lambo_huracan.webp" alt="Imagen de un producto">
-            <div class="div_producto">
-                <h1 class="titulo_producto">Lamborghini Huracán</h1>
-                <p>216.444€</p>
-            </div>
-            <a class="boton_producto" href="#" target="_self">Comprar</a>
-        </article>
-        <article class="productos_article">
-            <img class="imagen_producto" src="/assets/imagenes/producto_bugatti-chiron-super-sport.webp" alt="Imagen de un producto">
-            <div class="div_producto">
-                <h1 class="titulo_producto">Bugatti Chiron Super Sport</h1>
-                <p>2.402.020€</p>
-            </div>
-            <a class="boton_producto" href="#" target="_self">Comprar</a>
-
-        </article>
-        <article class="productos_article">
-            <img class="imagen_producto" src="/assets/imagenes/producto_aston-martin-vanquish.webp" alt="Imagen de un producto">
-            <div class="div_producto">
-                <h1 class="titulo_producto">Aston Martin Vanquish</h1>
-                <p>1.220.500€</p>
-            </div>
-            <a class="boton_producto" href="#" target="_self">Comprar</a>
-        </article>
-    </section>
-    <section class="productos_section">
-        <article class="productos_article">
-            <img class="imagen_producto" src="/assets/imagenes/producto_pagani-imola-roadster.webp" alt="Imagen de un producto">
-            <div class="div_producto">
-                <h1 class="titulo_producto">Pagani Imola Roadster</h1>
-                <p>5.570.900€</p>
-            </div>
-            <a class="boton_producto" href="#" target="_self">Comprar</a>
-        </article>
-        <article class="productos_article">
-            <img class="imagen_producto_ferrari" src="/assets/imagenes/producto_ferrari_458_2011.webp" alt="Imagen de un producto">
-            <div class="div_producto">
-                <h1 class="titulo_producto">Ferrari 458 2011</h1>
-                <p>354.600€</p>
-            </div>
-            <a class="boton_producto" href="#" target="_self">Comprar</a>
-        </article>
-        <article class="productos_article">
-            <img class="imagen_producto" src="/assets/imagenes/producto_maserati_MC20_2025.jpg" alt="Imagen de un producto">
-            <div class="div_producto">
-                <h1 class="titulo_producto">Maserati MC20 2025</h1>
-                <p>215.000€</p>
-            </div>
-            <a class="boton_producto" href="#" target="_self">Comprar</a>
-        </article>
-    </section>
-</main>
-<footer class="footer">
-    <ul class="footer_enlaces">
-        <a href="inicio.html" target="_self">Copyright © 2024 Motor Mania</a>
-        <a href="inicio.html" target="_self">Sobre nosotros</a>
-        <a href="inicio.html" target="_self">Cookies</a>
-        <a href="inicio.html" target="_self">Terminos de servicio</a>
-    </ul>
-</footer>
+    </footer>
 </body>
 </html>
