--- a/productos.html
+++ b/productos.html
@@ -34,7 +34,7 @@
             <article class="productos_article">
                 <img class="imagen_producto" src="/assets/imagenes/producto_lambo_huracan.webp" alt="Imagen de un producto">
                 <div class="div_producto">
-                    <h1 class="titulo_producto">Lamborghini Huracán</h1>
+                    <h2 class="titulo_producto">Lamborghini Huracán</h2>
                     <p>216.444€</p>
                 </div>
                 <a class="boton_producto" href="#" target="_self">Comprar</a>
@@ -42,7 +42,7 @@
             <article class="productos_article">
                 <img class="imagen_producto" src="/assets/imagenes/producto_bugatti-chiron-super-sport.webp" alt="Imagen de un producto">
                 <div class="div_producto">
-                    <h1 class="titulo_producto">Bugatti Chiron Super Sport</h1>
+                    <h2 class="titulo_producto">Bugatti Chiron Super Sport</h2>
                     <p>2.402.020€</p>
                 </div>
                 <a class="boton_producto" href="#" target="_self">Comprar</a>
@@ -50,7 +50,7 @@
             <article class="productos_article">
                 <img class="imagen_producto" src="/assets/imagenes/producto_aston-martin-vanquish.webp" alt="Imagen de un producto">
                 <div class="div_producto">
-                    <h1 class="titulo_producto">Aston Martin Vanquish</h1>
+                    <h2 class="titulo_producto">Aston Martin Vanquish</h2>
                     <p>1.220.500€</p>
                 </div>
                 <a class="boton_producto" href="#" target="_self">Comprar</a>
@@ -60,7 +60,7 @@
             <article class="productos_article">
                 <img class="imagen_producto" src="/assets/imagenes/producto_pagani-imola-roadster.webp" alt="Imagen de un producto">
                 <div class="div_producto">
-                    <h1 class="titulo_producto">Pagani Imola Roadster</h1>
+                    <h2 class="titulo_producto">Pagani Imola Roadster</h2>
                     <p>5.570.900€</p>
                 </div>
                 <a class="boton_producto" href="#" target="_self">Comprar</a>
@@ -68,7 +68,7 @@
             <article class="productos_article">
                 <img class="imagen_producto_ferrari" src="/assets/imagenes/producto_ferrari_458_2011.webp" alt="Imagen de un producto">
                 <div class="div_producto">
-                    <h1 class="titulo_producto">Ferrari 458 2011</h1>
+                    <h2 class="titulo_producto">Ferrari 458 2011</h2>
                     <p>354.600€</p>
                 </div>
                 <a class="boton_producto" href="#" target="_self">Comprar</a>
@@ -76,26 +76,34 @@
             <article class="productos_article">
                 <img class="imagen_producto" src="/assets/imagenes/producto_maserati_MC20_2025.jpg" alt="Imagen de un producto">
                 <div class="div_producto">
-                    <h1 class="titulo_producto">Maserati MC20 2025</h1>
+                    <h2 class="titulo_producto">Maserati MC20 2025</h2>
                     <p>215.000€</p>
                 </div>
                 <a class="boton_producto" href="#" target="_self">Comprar</a>
             </article>
         </section>
-        <h2 class="titulo_solo_por_hoy">¡Sólo por hoy!</h2>
+        <h1 class="titulo_solo_por_hoy">¡Sólo por hoy!</h1>
         <section class="oferta_section">
-            <article class="oferta_article">
+            <article class="oferta_article_1">
                 <img class="imagen_oferta" src="/assets/imagenes/oferta_solo_por_hoy.jpg" alt="Imagen de una oferta">
-                <p>wrfqwrfqf</p>
+                <p>Aprovecha esta exclusiva oferta del Pagani Huayra Codalunga, un coche de lujo con un diseño único y prestaciones excepcionales, este modelo combina elegancia y rendimiento, ofreciendo una experiencia de conducción inigualable, con un diseño meticulosamente elaborado y prestaciones de primer nivel, el Pagani Huayra Codalunga es la perfecta fusión de arte y tecnología, cada detalle refleja su exclusividad y sofisticación, haciéndolo una joya del mundo automotriz. ¡No dejes pasar esta oportunidad única de poseer esta edición limitada!</p>
             </article>
-            <div>
-                <article class="animacion_productos_article">
+            <article class="oferta_article_2">
+                <div class="animacion_productos_div">
                     <img class="animacion_productos_imagen" src="/assets/imagenes/pagani-huayra-codalunga-1.webp" alt="Imagen del Pagani Huayra Codalunga">
                     <img class="animacion_productos_imagen" src="/assets/imagenes/pagani-huayra-codalunga-2.jpeg" alt="Imagen del Pagani Huayra Codalunga">
                     <img class="animacion_productos_imagen" src="/assets/imagenes/pagani-huayra-codalunga-3.jpg" alt="Imagen del Pagani Huayra Codalunga">
                     <img class="animacion_productos_imagen" src="/assets/imagenes/pagani-huayra-codalunga-4.jpg" alt="Imagen del Pagani Huayra Codalunga">
-                </article>
-            </div>
+                </div>
+                <div class="oferta_div">
+                    <h2>Pagani Huayra Codalunga</h2>
+                    <div class="oferta_div_precio">
+                        <p><del>6.849.000€</del></p>
+                        <p>3.424.500€</p>
+                    </div>
+                    <a class="boton_producto_inverso" href="#" target="_self">Comprar</a>
+                </div>
+            </article>
         </section>
     </main>
     <footer class="footer">
