--- a/marcas.html
+++ b/marcas.html
@@ -42,6 +42,32 @@
                 de una calidad excelente</p>
         </section>
 
+        <section class="section_presentacion_lamborghini">
+            <h2 class="titulo_presentacion_lamborghini">"Lamborghini: La cumbre del lujo y el rendimiento"</h2>
+            <div class="div_presentacion_lamborghini">
+                <article class="article_presentacion_lamborghini">
+                    <img class="icono_presentacion_lamborghini" src="/assets/imagenes/Icono_Diseño.png" alt="Icono Diseño">
+                    <h3>Diseño Atemporal</h3>
+                    <p>El diseño de Lamborghini es sinónimo de exclusividad, con líneas futuristas y formas aerodinámicas.</p>
+                </article>
+                <article class="article_presentacion_lamborghini">
+                    <img class="icono_presentacion_lamborghini" src="/assets/imagenes/Icono_Velocidad.png" alt="Icono Velocidad">
+                    <h3>Velocidad Extrema</h3>
+                    <p>Modelos como el Aventador alcanzan velocidades superiores a los 350 km/h, haciendo de Lamborghini un referente.</p>
+                </article>
+                <article class="article_presentacion_lamborghini">
+                    <img class="icono_presentacion_lamborghini" src="/assets/imagenes/Icono_Innovacion.png" alt="Icono Innovación">
+                    <h3>Innovación Tecnológica</h3>
+                    <p>Con motores V12 y tecnologías híbridas, Lamborghini lidera en innovación en el sector automotriz.</p>
+                </article>
+                <article class="article_presentacion_lamborghini">
+                    <img class="icono_presentacion_lamborghini" src="/assets/imagenes/Icono_Lujo.png" alt="Icono Lujo">
+                    <h3>Lujo Exclusivo</h3>
+                    <p>Cada detalle está cuidadosamente diseñado para ofrecer una experiencia de conducción incomparable.</p>
+                </article>
+            </div>
+        </section>
+
         <h2 class="titulo_nuestras_marcas">Otras marcas colaboradoras:</h2>
         <section class="marcas_section">
             <article class="marcas_article">
